--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="styles/estilos.css">
@@ -16,23 +17,21 @@
     <header class="fixed-top">
       <nav class="navbar bg-light">
         <div class="container-fluid">
-          <div class="d-flex">
+          <div class="d-flex col-3">
             <a class="navbar-brand d-flex" href="#">
               <img src="imagenes/logo1.png" alt="CatShop Logo" class="logo-image pe-2" />
               <h3 class="h3 fst-italic"> CatShop</h3>
             </a>
-            <!--
-              :: Trabajando en una nueva forma de filtrar los productos, pero no está funcional aún
-
-              <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>-->
-
           </div>
-          <div>
-            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#canvasCarrito" aria-controls="offcanvasRight">Carrito</button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="canvasCarrito" data-bs-scroll="true" aria-labelledby="offcanvasRightLabel">
+          <div class="d-flex align-items-center col-6">
+            <form class="d-flex w-100" role="search">
+              <input id="searchValue" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button id="searchButton" class="btn btn-secondary" type="submit">Search</button>
+            </form>
+          </div>
+          <div class="col-3 text-end">
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#canvasCarrito" aria-controls="offcanvasRight"><i class="bi bi-cart4"></i> <span id="carritoCounter">0</span></button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="canvasCarrito" aria-labelledby="offcanvasRightLabel">
               <div class="offcanvas-header">
                 <h2><i class="bi bi-cart4"></i></h2>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -64,7 +63,8 @@
         <div class="text-center">Copyright © 2022 CatShop - Proyecto final, JavaScript - Imágenes únicamente utilizadas con fines educativos</div>
       </div>
     </footer>
-
+    <script src="javascript/carrito.js"></script>
     <script src="javascript/main.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </body>
 </html>
